[gd_scene load_steps=21 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://utility_nodes/Background.gd" type="Script" id=2]
[ext_resource path="res://graphics/background/sky1.png" type="Texture" id=3]
[ext_resource path="res://graphics/background/horizon.png" type="Texture" id=4]
[ext_resource path="res://graphics/background/tower.png" type="Texture" id=5]
[ext_resource path="res://graphics/background/sky2.png" type="Texture" id=6]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://WaterArea.gd" type="Script" id=8]
[ext_resource path="res://graphics/water.png" type="Texture" id=9]
[ext_resource path="res://utility_nodes/Borders.gd" type="Script" id=10]
[ext_resource path="res://level/Stand.tscn" type="PackedScene" id=11]
[ext_resource path="res://level/SpawnArea.tscn" type="PackedScene" id=12]
[ext_resource path="res://utility_nodes/JukeBox.tscn" type="PackedScene" id=13]
[ext_resource path="res://sfx/sea2.ogg" type="AudioStream" id=14]
[ext_resource path="res://hud/button/normal.png" type="Texture" id=15]
[ext_resource path="res://hud/button/pressed.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1024, 512 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2048, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 1024 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 512, 96 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]

[node name="Sea" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 640, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/Sea"]
texture = ExtResource( 3 )
centered = false

[node name="Horizon" type="ParallaxLayer" parent="Background/ParallaxBackground"]
position = Vector2( 0, 141 )
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 640, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/Horizon"]
texture = ExtResource( 4 )
centered = false

[node name="Tower" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_scale = Vector2( 0.4, 1 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/Tower"]
texture = ExtResource( 5 )
centered = false

[node name="SkyHigh" type="ParallaxLayer" parent="Background/ParallaxBackground"]
position = Vector2( 0, -200 )
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 640, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/SkyHigh"]
texture = ExtResource( 6 )
centered = false

[node name="Level" type="Node2D" parent="."]
z_index = 10

[node name="Player" parent="Level" instance=ExtResource( 7 )]
position = Vector2( 815, 186 )

[node name="WaterArea" type="Area2D" parent="Level"]
space_override = 1
gravity = 180.0
linear_damp = 15.0
angular_damp = 10.0
collision_layer = 17
collision_mask = 17
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Level/WaterArea"]
modulate = Color( 0.345098, 0.768627, 1, 0.443137 )
position = Vector2( 495, 803 )
scale = Vector2( 9.72656, 4.8125 )
z_index = 5
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/WaterArea"]
position = Vector2( 0, 697 )
shape = SubResource( 1 )

[node name="Borders" type="Node2D" parent="Level"]
editor/display_folded = true
script = ExtResource( 10 )

[node name="Top" type="Area2D" parent="Level/Borders"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Borders/Top"]
position = Vector2( 0, 190 )
shape = SubResource( 2 )

[node name="Left" type="Area2D" parent="Level/Borders"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Borders/Left"]
position = Vector2( 0, 1220 )
shape = SubResource( 3 )

[node name="Right" type="Area2D" parent="Level/Borders"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Level/Borders/Right"]
position = Vector2( 1030, 1220 )
shape = SubResource( 3 )

[node name="Bottom" type="Area2D" parent="Level/Borders"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Borders/Bottom"]
position = Vector2( 0, 1220 )
shape = SubResource( 2 )

[node name="Stand" parent="Level" instance=ExtResource( 11 )]
position = Vector2( 1002, 164 )

[node name="Fishes" type="Node2D" parent="Level"]

[node name="SpawnAreas" type="Node2D" parent="Level"]
z_index = 20

[node name="Grey" parent="Level/SpawnAreas" instance=ExtResource( 12 )]
editor/display_folded = true
position = Vector2( 510, 220 )
amount = 128

[node name="Area2D" parent="Level/SpawnAreas/Grey" index="0"]
editor/display_folded = true
position = Vector2( 0, 80 )

[node name="CollisionShape2D" parent="Level/SpawnAreas/Grey/Area2D" index="0"]
shape = SubResource( 4 )

[node name="Green" parent="Level/SpawnAreas" instance=ExtResource( 12 )]
position = Vector2( 510, 290 )
species = 1
amount = 24

[node name="Blue" parent="Level/SpawnAreas" instance=ExtResource( 12 )]
position = Vector2( 510, 370 )
species = 2
amount = 24

[node name="Purple" parent="Level/SpawnAreas" instance=ExtResource( 12 )]
position = Vector2( 510, 460 )
species = 3
amount = 20

[node name="Turquoise" parent="Level/SpawnAreas" instance=ExtResource( 12 )]
position = Vector2( 510, 550 )

[node name="Golden" parent="Level/SpawnAreas" instance=ExtResource( 12 )]
position = Vector2( 510, 650 )

[node name="Sound" type="Node" parent="."]

[node name="JukeBox" parent="Sound" instance=ExtResource( 13 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 14 )
volume_db = -16.0
autoplay = true

[node name="TouchControls" type="CanvasLayer" parent="."]

[node name="Left" type="TouchScreenButton" parent="TouchControls"]
visible = false
modulate = Color( 1, 1, 1, 0.643137 )
position = Vector2( 1150, 540 )
scale = Vector2( 6, 6 )
normal = ExtResource( 15 )
pressed = ExtResource( 16 )

[node name="Right" type="TouchScreenButton" parent="TouchControls"]
visible = false
modulate = Color( 1, 1, 1, 0.643137 )
position = Vector2( 24, 540 )
scale = Vector2( 6, 6 )
normal = ExtResource( 15 )
pressed = ExtResource( 16 )

[connection signal="body_entered" from="Level/WaterArea" to="Level/WaterArea" method="_on_WaterArea_body_entered"]
[connection signal="area_entered" from="Level/Borders/Top" to="Level/Borders" method="_on_Top_area_entered"]
[connection signal="area_entered" from="Level/Borders/Left" to="Level/Borders" method="_on_Left_area_entered"]
[connection signal="area_entered" from="Level/Borders/Right" to="Level/Borders" method="_on_Right_area_entered"]
[connection signal="area_entered" from="Level/Borders/Bottom" to="Level/Borders" method="_on_Bottom_area_entered"]
[connection signal="fish_collected" from="Level/Stand" to="." method="_on_Stand_fish_collected"]
[connection signal="pressed" from="TouchControls/Left" to="Level/Player" method="_on_Left_pressed"]
[connection signal="released" from="TouchControls/Left" to="Level/Player" method="_on_Left_released"]
[connection signal="pressed" from="TouchControls/Right" to="Level/Player" method="_on_Right_pressed"]
[connection signal="released" from="TouchControls/Right" to="Level/Player" method="_on_Right_released"]

[editable path="Level/SpawnAreas/Grey"]
